--- a/FightGearProducts/appsettings.json
+++ b/FightGearProducts/appsettings.json
@@ -8,6 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "FightGearStoreConnection": "Server=(localdb)\\MSSQLLocalDB;Database=FightGear;MultipleActiveResultSets=true"
+    "FightGearStoreConnection": "Server=(localdb)\\MSSQLLocalDB;Database=FightGear;MultipleActiveResultSets=true"//,
+    //"AzureDb": "Server=tcp:retaildbsvr.database.windows.net,1433;Initial Catalog=retaildb;Persist Security Info=False;User ID=sd9admin;Password=Passw0rd;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
